--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <img class="imagem" src="DSC02750.JPG">
         </div>
          
-         <h1>Florizele Nhampossa <br><span>Desenvolvedora de p&aacute;ginas web</span></h2>
+         <h1>Florizele Nhampossa <br><span>Desenvolvedora Web</span></h2>
          </div>
       <div class="Dados_pessoais">
         <h2 class="h2">Dados Pessoais</h2>
